   - (All) Expressing Dynamo command line options with Windows style 
     options (/f) is no longer supported. Going forward, only Unix style 
     options (-f or --foo) are available.
   - (All) Non-standard Dynamo command line options used for tuning
     or activating alternative code paths (-force_raw and -use_rdtsc)
     are now consolidated in the new --flag option.
- Bug fixes:
   - (Linux) Removed stropts.h include for Linux, as this file is no
     longer available with newer Linux distributions.
   - (OS X) Specialized the OS X makefile (Makefile-OSX.all) into
     Makefile-OSX.ppc and Makefile-OSX.i386, because otherwise builds 
     on x86 are breaking due to the CPU architecture specific timer 
     code.
   - (All) Patch by Ryan Bever to fix the version check being performed 
     when loading a ICF files. The new version format caused the check 
     to fail when loading ICF files that were written by former versions 
     of Iometer (see Bug Tracker ID 3141394).
   - (All) Patch by Daniel Scheibli to fix the PROCESSOR row format in 
     the CSV file output (see Bug Tracker ID 3141400).
- Documentation:
   - Converted Iometer User's Manual from Star Office based file (.sxw)
     to the Open Document Format (.odt)
- Others:
   - (All) Reimplementation of handing of Dynamo command line option 
     handling and the related help output (aka Syntax() function). 
   - (All) Minor changes to the initial puslar output. In particular the
     processor family information were cleaned up.
   - Appended .txt extension to the capital letter files (CHANGELOG etc.)
   - Rework of CHANGELOG file to clarify changes since version 2006.07.27.



Version 1.1.0 (RC1)
===================

- New features:
   - (All) Different data randomization options are now available 
     via a drop down menu in the GUI. Options are: "Repeating bytes", 
     "Pseudo-Random" (used by version 2006.07.27 and older) and
     "Full random".